--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
     "start": "next start"
   },
   "dependencies": {
+    "@tanstack/react-query": "^4.29.19",
     "next": "^13.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "ui": "*"
+    "ui": "workspace:*"
   },
   "devDependencies": {
     "@types/node": "^17.0.12",
@@ -20,7 +21,7 @@
     "@types/react-dom": "^18.0.7",
     "eslint": "7.32.0",
     "eslint-config-custom": "*",
-    "tsconfig": "*",
+    "tsconfig": "workspace:*",
     "typescript": "^4.5.3"
   }
 }
