--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     "@tanstack/react-query": "^4.29.19",
     "next": "^13.4.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "ui": "workspace:*"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/node": "^17.0.12",
