--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
       }
     ],
     "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
   },
   "include": [
     "next-env.d.ts",
