--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,28 @@
 {
   "extends": "tsconfig/nextjs.json",
   "compilerOptions": {
+    "module": "commonjs",
+    "declaration": true,
+    "removeComments": true,
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true,
+    "allowSyntheticDefaultImports": true,
+    "target": "ES2021",
+    "sourceMap": true,
+    "outDir": "./dist",
+    "baseUrl": "./",
+    "incremental": true,
+    "skipLibCheck": true,
+    "strictNullChecks": false,
+    "noImplicitAny": false,
+    "strictBindCallApply": false,
+    "forceConsistentCasingInFileNames": false,
+    "noFallthroughCasesInSwitch": false,
     "plugins": [
       {
         "name": "next"
       }
-    ],
-    "experimentalDecorators": true,
-    "emitDecoratorMetadata": true,
+    ]
   },
   "include": [
     "next-env.d.ts",
